src/styles/landing/banner.less
.banner-wrapper {
  width: 100%;
  height: 56.375rem;
  max-height: 21.25rem;
  position: relative;
  transition: max-height 0.5s ease-in-out;
}

.banner-expanded {
  max-height: 56.375rem;
}

.clear-margin-bottom {
  margin-bottom: 0 !important;
}

.banner {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  span,
  a {
    color: @color-text-accent;
    letter-spacing: 0.1em;
    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
  }
  a {
    transition: 120ms ease-in-out;
    text-decoration: none;
    display: inline-block;
  }
  a:hover {
    color: darken(@color-text-accent, 10%);
    transform: translateY(-2px);
  }
  &-title {
    font-size: 5rem;
    letter-spacing: 0.1rem;
    transition: transform 0.5s ease-in-out;
    text-shadow: 4px 4px 16px rgba(0, 0, 0, 0.375);
    .no-select();
  }
  &-title-up {
    transform: translateY(-17rem);
  }
  .about {
    position: absolute;
    bottom: 6.25rem;
    opacity: 0;
    transition: all 500ms ease-in-out;
    &-my {
      .no-select();
      position: relative;
      &-title {
        text-align: center;
        font-size: 1.75rem;
        line-height: 3.875rem;
        .indev {
          font-size: 0.875rem;
          position: absolute;
          letter-spacing: 0;
          margin-left: -0.375rem;
          padding-top: 0.375rem;
        }
      }
      &-link {
        font-size: 1.375rem;
        text-align: center;
        line-height: 3rem;
        a {
          margin-right: 1.5rem;
        }
      }
      &-link {
        a:last-child {
          margin-right: 0;
        }
      }
    }
    &-settings {
      margin-top: 1.75rem;
      .no-select();
      &-title {
        text-align: center;
        font-size: 1.75rem;
        line-height: 5rem;
      }
      &-link {
        font-size: 1.375rem;
        text-align: center;
        line-height: 3rem;
        a {
          margin-right: 1.5rem;
        }
      }
      &-link {
        a:last-child {
          margin-right: 0;
        }
      }
    }
    &-copyright {
      margin-top: 7.75rem;
      font-weight: 300;
      .no-select();
      &-item {
        font-size: 1rem;
        text-align: center;
        line-height: 1.75rem;
        letter-spacing: 0;
        svg {
          width: 1.25rem;
          height: 1.25rem;
          margin-top: 0.75rem;
          transition: 200ms;
        }
        svg:hover {
          cursor: pointer;
          filter: brightness(0.9);
        }
      }
      &-split {
        margin: 0 0.5rem;
      }
    }
  }
  .about-show {
    opacity: 1;
  }
}

/* PC */

// 2k

@media (min-height: 1280px) and (min-width: 1960px) {
  .banner-wrapper {
    height: 68.5rem;
    max-height: 22rem;
  }
  .banner-expanded {
    max-height: 68.5rem;
  }
  .banner {
    &-title {
      font-size: 5.5rem;
    }
    &-title-up {
      transform: translateY(-22.5rem);
    }
    &-my {
      margin-top: 1.5rem;
    }
    .about {
      position: absolute;
      bottom: 12rem;
      transform: scale(1.35);
      &-copyright {
        margin-top: 6.5rem;
      }
    }
  }
}

@media (max-height: 768px) {
  .banner-wrapper {
    height: 704px;
    max-height: 214px;
  }
  .banner-expanded {
    max-height: 704px;
  }
  .banner {
    &-title {
      font-size: 3.875rem;
    }
    &-title-up {
      transform: translateY(-232px);
    }
    .about {
      position: absolute;
      bottom: 54px;
      &-my {
        &-title {
          font-size: 28px;
          line-height: 3.5rem;
        }
      }
      &-settings {
        margin-top: 24px;
        &-title {
          font-size: 28px;
          line-height: 3.5rem;
        }
      }
      &-copyright {
        margin-top: 54px;
      }
    }
  }
}

// iPad

@media (max-height: 754px) {
  .banner-wrapper {
    height: 700px;
    max-height: 240px;
    .banner {
      .about {
        &-copyright {
          margin-top: 80px;
        }
      }
    }
  }
  .banner-expanded {
    max-height: 700px;
  }
  .banner-title {
    font-size: 68px;
  }
}

/* Mobile */

@media (max-width: 767px) {
  .banner-wrapper {
    height: 720px;
    max-height: 220px;
  }
  .banner-expanded {
    max-height: 720px;
  }
  .banner {
    background: none;
    &-title {
      font-size: 3rem;
    }
    &-title-up {
      transform: translateY(-272px);
    }
    .about {
      bottom: 56px;
      &-my {
        &-title {
          font-size: 24px;
          line-height: 64px;
          .indev {
            font-size: 14px;
          }
        }
        &-link {
          font-size: 20px;
          line-height: 36px;
        }
      }
      &-settings {
        margin-top: 42px;
        &-title {
          font-size: 24px;
          line-height: 64px;
        }
        &-link {
          font-size: 20px;
          line-height: 36px;
        }
      }
      &-copyright {
        margin-top: 122px;
        &-item {
          font-size: 14px;
        }
      }
    }
  }
}

// iPhone SE
@media (max-width: 320px) and (max-height: 568px) {
  .banner-wrapper {
    height: 540px;
    max-height: 182px;
  }
  .banner {
    &-title-up {
      transform: translateY(-188px);
    }
  }
  .banner-expanded {
    max-height: 540px;
    .about {
      bottom: 42px;
      &-my {
        &-title {
          line-height: 54px;
          .indev {
            font-size: 13px;
          }
        }
        &-link {
          line-height: 36px;
        }
      }
      &-settings {
        margin-top: 16px;
        &-title {
          line-height: 54px;
        }
        &-link {
          line-height: 36px;
        }
      }
      &-copyright {
        margin-top: 42px !important;
        &-item {
          font-size: 14px;
        }
      }
    }
  }
}

